[package]
name = "sqlsmith-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
fern = "0.7.1"
humantime = "2.2.0"
limbo = "0.0.20"
log = "0.4.27"
rusqlite = { version = "0.30", features = ["bundled"] }  # 可根据实际情况调整版本号
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
