[package]
name = "sqlsmith-rs-drivers"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
anyhow = "1.0.98"
limbo = "0.0.20"
log = "0.4.27"
rusqlite = { version = "0.30", features = ["bundled"] }  # 可根据实际情况调整版本号
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
