[package]
name = "sqlsmith-rs-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "main.rs"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
anyhow = "1.0.98"
serde_json = "1.0.140"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"
sqlsmith-rs-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }